--- a/app/src/main/res/layout/style1.xml
+++ b/app/src/main/res/layout/style1.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:background="#f6f5ec"
+        android:background="@color/colorBackground"
         android:padding="20dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tittle"
-            android:text="密码输入框-1"
+            android:text="密码输入框-风格1"
             android:textSize="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -26,7 +26,7 @@
         </TextView>
         <TextView
             android:id="@+id/textView1"
-            android:text="密码输入框-1"
+            android:text="等输入……"
             android:textSize="14dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/tittle"
