--- a/app/src/main/res/layout/style1.xml
+++ b/app/src/main/res/layout/style1.xml
@@ -42,6 +42,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:password_box_setBackgroundDrawable="@drawable/style1_has_input"
+            app:password_enableCursor="true"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
