--- a/app/src/main/res/layout/style1.xml
+++ b/app/src/main/res/layout/style1.xml
@@ -44,6 +44,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:password_box_setBackgroundDrawable="@drawable/style1_has_input"
             app:password_enableCursor="true"
+            app:password_enableLockTextView="false"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
