--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -4,41 +4,34 @@
         <attr name="password_viewBackground" format="reference|color"></attr>
         <attr name="password_enableHideCode" format="boolean"></attr>
         <attr name="password_enableHideBoxWhenNotInput" format="boolean"></attr>
-        <attr name="PasswordView_password_enableHideCode_text" format="string"></attr>
+        <attr name="password_enableHideCode_text" format="string"></attr>
         <attr name="password_enableCursor" format="boolean"></attr>
         <attr name="password_enableHighLight" format="boolean"></attr>
         <attr name="password_enableSoftKeyboardAutoShow" format="boolean"></attr>
         <attr name="password_enableSoftKeyboardAutoClose" format="boolean"></attr>
         <attr name="password_enableLockTextView" format="boolean"></attr>
-
-        <attr name="password_textColor" format="color"></attr>
-        <attr name="password_textSizePx" format="integer"></attr>
-        <attr name="password_textInputType" format="integer">
+        <attr name="password_text_setColor" format="color"></attr>
+        <attr name="password_text_setSize" format="integer"></attr>
+        <attr name="password_text_setInputType" format="integer">
             <enum name="Number" value="200" />
             <enum name="Phone" value="201" />
             <enum name="Text" value="202" />
             <enum name="DateTime" value="203" />
         </attr>
-        <attr name="password_textBold" format="boolean"></attr>
-
+        <attr name="password_text_setIsBold" format="boolean"></attr>
         <attr name="password_box_setNumber" format="integer"></attr>
         <attr name="password_box_setMargin" format="integer"></attr>
         <attr name="password_box_setSize" format="integer"></attr>
-        <attr name="password_box_setBackgroundDrawable" format="reference|color"></attr>
 
-        <attr name="password_boxHighLightBackgroundDrawable" format="reference|color"></attr>
-        <attr name="password_boxAfterBackgroundDrawable" format="reference|color"></attr>
+        <attr name="password_box_notInput_backgroundDrawable" format="reference|color"></attr>
+        <attr name="password_box_locked_backgroundDrawable" format="reference|color"></attr>
+        <attr name="password_box_highLight_backgroundDrawable" format="reference|color"></attr>
+        <attr name="password_box_hasInput_backgroundDrawable" format="reference|color"></attr>
 
-        <attr name="password_cursorBackgroundColor" format="color"></attr>
         <attr name="password_cursorHeight" format="integer"></attr>
         <attr name="password_cursorWidth" format="integer"></attr>
         <attr name="password_cursorFrequencyMillisecond" format="integer"></attr>
         <attr name="password_cursorBackgroundDrawable" format="reference|color"></attr>
-
-        <attr name="password_boxLockTextColor" format="color"></attr>
-        <attr name="password_boxLockBackgroundColor" format="color"></attr>
-        <attr name="password_boxLockBackgroundDrawable" format="reference|color"></attr>
-
+        <attr name="password_cursorColor" format="reference|color"></attr>
     </declare-styleable>
-
 </resources>
