--- a/app/src/main/res/layout/style2.xml
+++ b/app/src/main/res/layout/style2.xml
@@ -15,7 +15,7 @@
         android:layout_height="wrap_content">
         <TextView
             android:id="@+id/tittle"
-            android:text="密码输入框-风格1"
+            android:text="密码输入框-开启高亮盒子，并将盒子背景都更改为自定义drawable"
             android:textSize="20dp"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
@@ -25,8 +25,8 @@
             android:layout_height="wrap_content">
         </TextView>
         <TextView
-            android:id="@+id/textView1"
-            android:text="等输入……"
+            android:id="@+id/textView2"
+            android:text="待输入……"
             android:textSize="14dp"
             android:layout_marginTop="20dp"
             app:layout_constraintTop_toBottomOf="@+id/tittle"
@@ -37,11 +37,15 @@
             android:layout_height="wrap_content">
         </TextView>
         <com.yfz.password.PasswordView
-            android:id="@+id/passwordView1"
-            app:layout_constraintTop_toBottomOf="@+id/textView1"
+            android:id="@+id/passwordView2"
+            app:layout_constraintTop_toBottomOf="@+id/textView2"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
+            app:password_box_notInput_backgroundDrawable="@drawable/style2_not_input"
+            app:password_box_hasInput_backgroundDrawable="@drawable/style2_has_input"
+            app:password_enableHighLight="true"
+            app:password_box_highLight_backgroundDrawable="@drawable/style2_high_light"
             android:layout_marginTop="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content">
