--- a/app/src/main/res/layout/style3.xml
+++ b/app/src/main/res/layout/style3.xml
@@ -5,9 +5,66 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-    <com.yfz.password.PasswordView
-        android:layout_width="wrap_content"
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:background="@color/colorBackground"
+        android:padding="20dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content">
-    </com.yfz.password.PasswordView>
+        <TextView
+            android:id="@+id/tittle"
+            android:text="密码输入框-开启光标,开启输满后锁定组件(不可点击),直到解放"
+            android:textSize="20dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
+        <TextView
+            android:id="@+id/textView3"
+            android:text="待输入……"
+            android:textSize="14dp"
+            android:layout_marginTop="20dp"
+            app:layout_constraintTop_toBottomOf="@+id/tittle"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            android:textStyle="bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </TextView>
+        <Button
+            android:id="@+id/buttonView3"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="@id/textView3"
+            app:layout_constraintBottom_toBottomOf="@+id/textView3"
+            app:layout_constraintRight_toRightOf="parent"
+            android:text="点击解锁"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </Button>
+        <com.yfz.password.PasswordView
+            android:id="@+id/passwordView3"
+            app:layout_constraintTop_toBottomOf="@+id/textView3"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:password_box_notInput_backgroundDrawable="@drawable/style2_not_input"
+            app:password_box_hasInput_backgroundDrawable="@drawable/style2_has_input"
+            app:password_box_highLight_backgroundDrawable="@drawable/style2_high_light"
+            app:password_box_locked_backgroundDrawable="@drawable/style2_locked"
+            app:password_text_setColor="@color/colorText"
+            app:password_enableHighLight="true"
+            app:password_enableCursor="true"
+            app:password_enableLockTextView="true"
+            android:layout_marginTop="20dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+        </com.yfz.password.PasswordView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
